# gloo_examples

./: .gitignore  Makefile  README.md  meson.build
00_simple/: Makefile  main.cpp  meson.build
01_simple_texture/: Makefile  main.cpp  meson.build
02_simple_mesh/: Makefile  main.cpp  meson.build  pyramid.vert
03_render_texture/: Makefile  main.cpp  meson.build  pyramid.frag  screen.frag  screen.vert
04_simple_texture_imgui/: Makefile  main.cpp  meson.build
05_simple_mesh_imgui/: Makefile  main.cpp  meson.build
06_infinite_plane_camera/: Makefile  main.cpp  meson.build  plane.vert
07_infinite_plane_camera_imgui/: ImguiCamera.cpp  ImguiCamera.h  Makefile  main.cpp  meson.build  plane.frag  pyramid.vert
08_multiple_textures/: Makefile  main.cpp  meson.build
09_multiple_textures_imgui/: Makefile  direct.frag  direct.vert  main.cpp  meson.build
10_2dsdf_testing_imgui/: ImguiMouse.cpp  ImguiMouse.h  Makefile  main.cpp  meson.build
10_2dsdf_testing_imgui/shaders/: 00_circle.frag  01_equitriangle.frag  02_isotriangle.frag  03_triangle.frag  04_box.frag  05_obox.frag  06_rhombus.frag  07_trapezoid.frag  08_parallelogram.frag  09_line.frag  10_capsule.frag  11_pentagon.frag  12_hexagon.frag  13_octagon.frag  14_hexagram.frag  15_pentagram.frag  16_ngram.frag  17_pie.frag  18_disk.frag  19_arc.frag  20_vesica.frag  21_crescent.frag  22_egg.frag  23_heart.frag  24_cross.frag  25_ex.frag  26_polygon.frag  27_ellipse.frag  28_tunnel.frag
11_gpu_cpu_compare/: Makefile
11_gpu_cpu_compare/cpu_test/: Makefile  direct.frag  direct.vert  main.cpp  meson.build
11_gpu_cpu_compare/gpu_test/: Makefile  direct.frag  main.cpp  meson.build
12_multiple_shaders_imgui/: AppData.h  ImguiWindow.cpp  ImguiWindow.h  Makefile  main.cpp  meson.build
12_multiple_shaders_imgui/shaders/: circle.frag
13_multiple_windows/: ImguiWindow.cpp  Makefile  main.cpp  meson.build
13_multiple_windows/shaders/: box.frag
14_opencv_imgui/: AppData.h  ImguiWindow.cpp  ImguiWindow.h  Makefile  main.cpp  meson.build
lib/: glad  glm  kato
lib/glfw-cxx/: include  src
lib/gloo/: include  src
lib/imgui/: imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
lib/imgui/addons/: imgui-oops
lib/imgui/addons/imgui-filebrowser/: imfilebrowser.h
lib/imgui/addons/implot/: implot.cpp  implot.h  implot_internal.h  implot_items.cpp
lib/imgui/backend/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
