project('devsource',
    ['cpp', 'c'],
    default_options : [
        'cpp_std=gnu++17',
        'c_std=c17',
        'warning_level=3',
        'optimization=3'
    ]
)

subdir('00_simple')
subdir('01_simple_texture')
subdir('02_simple_mesh')
subdir('03_render_texture')
subdir('04_simple_texture_imgui')
subdir('05_simple_mesh_imgui')
subdir('06_infinite_plane_camera')
subdir('07_infinite_plane_camera_imgui')
subdir('08_multiple_textures')
subdir('09_multiple_textures_imgui')
subdir('10_2dsdf_testing_imgui')
subdir('11_gpu_cpu_compare/cpu_test')
subdir('11_gpu_cpu_compare/gpu_test')
subdir('12_multiple_shaders_imgui')
subdir('13_multiple_windows')
subdir('14_opencv_imgui')
